--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .poppins-thin-font {
@@ -9,82 +9,239 @@
 }
 
 nav {
-    display: flex;
-    max-width: 75%;
-    margin: 0 auto;
-    justify-content: space-between;
-    align-items: center;
-    padding: 87px 0;
+  display: flex;
+  max-width: 75%;
+  margin: 0 auto;
+  justify-content: space-between;
+  align-items: center;
+  padding: 87px 0;
 }
 
-nav h3{
-    font-size: 24px;
-    font-weight: bold;
-    color: #3A3A3A;
+nav h3 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #3a3a3a;
 }
 
-nav ul{
-    display: flex;
-    list-style: none;
-    gap: 34px;
+nav ul {
+  display: flex;
+  list-style: none;
+  gap: 34px;
 }
 
-nav ul li a{
-    text-decoration: none;
-    color: #3A3A3A;
-    font-size: 16px;
-    font-weight: 600;
+nav ul li a {
+  text-decoration: none;
+  color: #3a3a3a;
+  font-size: 16px;
+  font-weight: 600;
 }
 
-#banner{
-    display: flex;
-    max-width: 75%;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-    gap: 133px;
+#banner {
+  display: flex;
+  max-width: 75%;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  gap: 133px;
 }
 
-#banner .banner-detail{
-    max-width: 582px;
+#banner .banner-detail {
+  max-width: 582px;
 }
 
-.banner-detail h1{
-    font-size: 52px;
-    font-weight: bold;
-    color: #3A3A3A;
-    margin-bottom: 16px;
+.banner-detail h1 {
+  font-size: 52px;
+  font-weight: bold;
+  color: #3a3a3a;
+  margin-bottom: 16px;
 }
 
-.banner-detail p{
-    font-size: 16px;
-    color: #3A3A3A;
-    margin-bottom: 16px;
+.banner-detail p {
+  font-size: 16px;
+  color: #3a3a3a;
+  margin-bottom: 16px;
 }
 
-.banner-detail button{
-    background-color: #E02C6D;
-    color: #fff;
-    outline: none;
-    border: none;
-    height: 44px;
-    width: 196px;
-    border-radius: 41px;
-    font-size: 16px;
-    font-weight: bold;
+.banner-detail button {
+  background-color: #e02c6d;
+  color: #fff;
+  outline: none;
+  border: none;
+  height: 44px;
+  width: 196px;
+  border-radius: 41px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
-#banner img{
-    background: url(../images/camera-round-bg.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    /* width: 440px; */
+#banner img {
+  background: url(../images/camera-round-bg.png);
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 
-#sponsor{
-    max-width: 70%;
-    margin: 100px auto ;
-    display: flex;
-    justify-content: space-around;
-    padding: 35px 62px;
+#sponsor {
+  max-width: 75%;
+  margin: 100px auto;
+  display: flex;
+  justify-content: space-between;
+  padding: 35px 62px;
+}
+
+#collection {
+  max-width: 70%;
+  margin: 0 auto;
+  position: relative;
+  padding-bottom: 60px;
+}
+
+#collection h1 {
+  text-align: center;
+  font-size: 28px;
+  font-weight: 300px;
+  color: #3a3a3a;
+  line-height: 70px;
+  margin-bottom: 30px;
+}
+
+#collection .card-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 30px;
+}
+
+#collection .card-container .card {
+  padding: 15px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 40px 0px rgba(0, 0, 0, 0.15);
+}
+
+#collection .card-container .card img {
+  width: 100%;
+  border-radius: 5px;
+}
+
+#collection .card-container .card h3 {
+  color: #18191f;
+  font-size: 28px;
+  font-weight: 600;
+  line-height: 40px;
+  margin-top: 16px;
+}
+
+#collection .card-container .card .price {
+  font-size: 24px;
+  margin-top: 6px;
+}
+
+#collection .card-container .card .rating {
+  color: #fb8200;
+  font-size: 10px;
+  margin: 5px 0;
+}
+
+#collection .card-container .card .rating span {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 22px;
+  color: #5e6366;
+}
+
+#collection .card-container .card .detail {
+  color: #787885;
+  line-height: 22px;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+#collection button {
+  border: none;
+  outline: none;
+  background: none;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  color: #e02c6d;
+  font-size: 16px;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+#feature {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 70%;
+  margin: 100px auto;
+  gap: 96px;
+}
+
+#feature img {
+  border-radius: 10px;
+}
+
+#feature .feature-detail h1 {
+  font-size: 38px;
+  font-weight: bold;
+  color: #0a0826;
+  margin-bottom: 16px;
+  line-height: 60px;
+}
+
+#feature .feature-detail p {
+  color: #6c6c6c;
+  line-height: 28px;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+#feature .feature-detail button {
+  color: #fff;
+  border: none;
+  outline: none;
+  background-color: #e02c6d;
+  font-size: 16px;
+  font-weight: bold;
+  padding: 15px 25px;
+  border-radius: 8px;
+}
+
+footer {
+  background: #0a0826;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 50px;
+}
+
+footer .footer-container h1 {
+  font-size: 24px;
+  font-weight: bold;
+  color: #fff;
+}
+
+footer .footer-container p {
+  color: #d9dbe1;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 24px;
+  margin: 15px auto;
+}
+
+footer .footer-container .social {
+  margin-top: 20px;
+}
+
+footer .footer-container .social a {
+  color: #fff;
+  text-decoration: none;
+  margin: 0 8px;
+  background: #ffffff10;
+  border: 3px solid #745bb247;
+  border-radius: 50%;
+  padding: 8px 10px;
+  font-size: 25px;
 }
