--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,12 +1,17 @@
 @media screen and (max-width: 576px) {
   nav {
-    padding: 50px;
-    max-width: 100%;
+    max-width: 90%;
+    padding: 30px 0;
   }
 
   nav .mobiles-icon {
     display: inline;
-    font-size: 25px;
+    font-size: 20px;
+  }
+
+  nav h3 {
+    font-size: 20px;
+    text-align: center;
   }
 
   nav ul {
@@ -17,17 +22,27 @@
     flex-direction: column-reverse;
     text-align: center;
     max-width: 95%;
+    gap: 30px;
+  }
+
+  #banner .banner-detail h1 {
+    font-size: 30px;
+  }
+  #banner img {
+    max-width: 90%;
   }
 
   #sponsor {
     flex-wrap: wrap;
     justify-content: space-evenly;
     gap: 20px;
-    max-width: 95%;
+    max-width: 90%;
+    padding: 10px;
+    margin: 30px auto;
   }
 
   #collection {
-    max-width: 80%;
+    max-width: 90%;
   }
 
   #collection .card-container {
@@ -37,6 +52,26 @@
   #feature {
     flex-direction: column-reverse;
     text-align: center;
-    max-width: 70%;
+    max-width: 90%;
+    gap: 20px;
+    margin: 100px auto 30px;
+  }
+
+  #feature .feature-detail h1 {
+    font-size: 28px;
+    line-height: 40px;
+  }
+
+  #feature img {
+    width: 100%;
+  }
+
+  footer {
+    width: 100%;
+  }
+
+  footer .footer-container .social a {
+    font-size: 15px;
+    padding: 5px 7px;
   }
 }
